Clean unused assets and update head

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,9 +38,8 @@
 			{% else %}
 				<img class="headerIcon" src="{{ site.app_icon | relative_url }}" alt="{{ header_texts.app_icon_alt | default: 'App icon' }}" data-prefer-api="true">
 			{% endif %}
-			<div class="divider"></div>
 		</div>
-		<p class="headerName" data-prefer-api="true">{{ header_texts.hero_headline | default: site.app_name }}</p>
+		<p class="headerName">HörBär</p>
 	</div>
 	<nav class="{{ nav_class }}">
 		<ul>
