Update theme colors to orange

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
 			<li class="langSwitchItem">
 				<details class="langPicker">
 					<summary class="langPickerToggle" aria-label="{% if header_lang == 'de' %}Sprache wählen{% else %}Select language{% endif %}">
-						<span class="langSwitchFlag" aria-hidden="true">🌐</span>
+						<i class="fas fa-globe langSwitchFlag" aria-hidden="true"></i>
 					</summary>
 					<div class="langPickerMenu">
 						<div class="langPickerTitle">{% if header_lang == "de" %}Sprache{% else %}Language{% endif %}</div>
