--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -257,6 +257,7 @@ nav > ul li a:active {
 .langSwitchFlag {
 	font-size: 1.8rem;
 	line-height: 1;
+	color: $accent-color;
 }
 
 .langPicker[open] .langPickerToggle,
