Adjust landing fonts and spacing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 {% include head.html %}
 
-<body>
+<body class="homePage">
     <div class="imageWrapper">
             <div class="headerBackground">
                 <div class="container">
