--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -702,18 +702,17 @@ nav > ul li a.langPickerOption.isActive:visited {
 
 .iphonePreview {
 	grid-area: p;
-	background-image: url($device-color);
-	background-size: 400px auto;
-	background-repeat: no-repeat;
 	margin-top: 68px;
 }
 
 .iphoneScreen {
-	width: 349px;
-	-webkit-clip-path: url(#screenMask);
-	clip-path: url(#screenMask);
-	margin-left: 26px;
-	margin-top: 23px;
+	width: 400px;
+	max-width: 100%;
+	height: auto;
+	-webkit-clip-path: none;
+	clip-path: none;
+	margin-left: 0;
+	margin-top: 0;
 }
 
 .videoContainer {
@@ -732,14 +731,10 @@ nav > ul li a.langPickerOption.isActive:visited {
 
 @media only screen and (max-width: 1070px) {
 
-	.iphonePreview {
-		background-size: 370px auto;
-	}
-
 	.iphoneScreen {
-		width: 322px;
-		margin-left: 24px;
-		margin-top: 22px;
+		width: 360px;
+		margin-left: 0;
+		margin-top: 0;
 	}
 
 	.videoContainer {
@@ -760,20 +755,18 @@ nav > ul li a.langPickerOption.isActive:visited {
 
 	.iphonePreview {
 		display: flex;
-		background-size: 260px auto;
-		background-position: center 0;
 		margin-top: 47px;
 		justify-content: center;
-		padding-bottom: 75px;
+		padding-bottom: 40px;
 	}
 
 	.iphoneScreen {
-		width: 226px;
-		height: 488px;
-		-webkit-clip-path: url(#screenMask);
-		clip-path: url(#screenMask);
-		margin: 0px;
-		margin-top: 17px;
+		width: 260px;
+		height: auto;
+		-webkit-clip-path: none;
+		clip-path: none;
+		margin: 0;
+		margin-top: 0;
 	}
 
 	.videoContainer {
