--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 {% assign footer_lang = page.lang | default: "en" %}
 {% assign footer_i18n = site.data.i18n[footer_lang].footer | default: site.data.i18n.en.footer %}
 {% assign changelog_link = "/changelog/" %}
+{% assign privacy_link = "/privacypolicy/" %}
+{% assign terms_link = "/termsofservice/" %}
+{% assign imprint_link = "/imprint/" %}
 {% if footer_lang == "de" %}
 	{% assign changelog_link = "/de/changelog/" %}
+	{% assign privacy_link = "/de/privacypolicy/" %}
+	{% assign terms_link = "/de/termsofservice/" %}
+	{% assign imprint_link = "/de/impressum/" %}
 {% endif %}
 <footer>
 	{% if site.your_name %}
@@ -85,10 +91,8 @@
 	</div>
 	<div class="footerLinks">
 		<a href="{{ changelog_link | relative_url }}">{{ footer_i18n.changelog | default: "Neuigkeiten" }}</a>
-		<a href="{{ '/de/privacypolicy/' | relative_url }}">{{ footer_i18n.privacy | default: "Datenschutzerklärung" }}</a>
-		<a href="{{ '/de/termsofservice/' | relative_url }}">{{ footer_i18n.terms | default: "AGB" }}</a>
-		{% if footer_lang == "en" %}
-			<a href="{{ '/legal/' | relative_url }}">{{ footer_i18n.legal_note | default: "Legal notice" }}</a>
-		{% endif %}
+		<a href="{{ privacy_link | relative_url }}">{{ footer_i18n.privacy | default: "Datenschutzerklärung" }}</a>
+		<a href="{{ terms_link | relative_url }}">{{ footer_i18n.terms | default: "AGB" }}</a>
+		<a href="{{ imprint_link | relative_url }}">{{ footer_i18n.imprint | default: "Impressum" }}</a>
 	</div>
 </footer>
